<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <!--guideline_horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
    <!--guideline_horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!--iv_register_background-->
    <ImageView
        android:id="@+id/iv_register_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_lightgrey_transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!--iv_splashScreen_inspirecoding_logo-->
    <ImageView
        android:id="@+id/iv_register_firebase_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:src="@drawable/firebase_icon"
        android:background="@drawable/white_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal"/>

    <TextView
        android:id="@+id/tv_register_createaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="@dimen/textsize_xxlarge"
        android:textColor="@color/dark_grey"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical"
        app:layout_constraintRight_toRightOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/iv_register_firebase_logo"/>

    <!--til_register_name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_createaccount">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/margin_small"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="@dimen/textsize_large" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--til_register_email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_register_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/margin_small"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textsize_large" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--til_register_password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_register_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/margin_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/textsize_large" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--btn_register_login-->
    <Button
        android:id="@+id/btn_register_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/shape_rounded_lightblue_filled_noborder"
        android:paddingBottom="1dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_register_password" />

    <!--tv_register_orregisterwith-->
    <TextView
        android:id="@+id/tv_register_orregisterwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/or_register_with"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register_login" />

    <!--iv_register_facebook-->
    <ImageView
        android:id="@+id/iv_register_facebook"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_small"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_orregisterwith" />

    <!--iv_register_google-->
    <ImageView
        android:id="@+id/iv_register_google"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_small"
        android:src="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_orregisterwith" />

    <!--tv_register_loginnow-->
    <TextView
        android:id="@+id/tv_register_loginnow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_register_google" />

</androidx.constraintlayout.widget.ConstraintLayout>